--- a/index.html
+++ b/index.html
@@ -172,6 +172,51 @@
 
   </main>
 
+  <nav class="progress-timeline">
+    <div class="timeline-container">
+      <div class="timeline-node" data-slide="1">1</div>
+      <div class="timeline-node" data-slide="2">2</div>
+      <div class="timeline-node" data-slide="3">3</div>
+      <div class="timeline-node" data-slide="4">4</div>
+      <div class="timeline-node" data-slide="5">5</div>
+      <div class="timeline-node" data-slide="6">6</div>
+      <div class="timeline-node" data-slide="7">7</div>
+      <div class="timeline-node" data-slide="8">8</div>
+      <div class="timeline-node" data-slide="9">9</div>
+      <div class="timeline-node" data-slide="10">10</div>
+      <div class="timeline-node" data-slide="11">11</div>
+      <div class="timeline-node" data-slide="12">12</div>
+      <div class="timeline-node" data-slide="13">13</div>
+    </div>
+  </nav>
+
   <script src="main.js"></script>
+  <script>
+    document.querySelectorAll(".timeline-node").forEach(node => {
+      node.addEventListener("click", () => {
+        const index = parseInt(node.getAttribute("data-slide")) - 1;
+        const targetSection = document.querySelectorAll(".full-slide")[index];
+        if (targetSection) {
+          targetSection.scrollIntoView({ behavior: "smooth" });
+        }
+      });
+    });
+
+    // Optional: highlight active node on scroll
+    window.addEventListener("scroll", () => {
+      const sections = document.querySelectorAll(".full-slide");
+      const nodes = document.querySelectorAll(".timeline-node");
+
+      sections.forEach((section, index) => {
+        const rect = section.getBoundingClientRect();
+        if (rect.top <= window.innerHeight * 0.4 && rect.bottom >= window.innerHeight * 0.4) {
+          nodes.forEach(n => n.classList.remove("active"));
+          if (nodes[index]) {
+            nodes[index].classList.add("active");
+          }
+        }
+      });
+    });
+  </script>
 </body>
 </html>
