--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
 
   <nav class="progress-timeline">
     <div class="timeline-container">
-      <div class="timeline-node" data-slide="1">1</div>
-      <div class="timeline-node" data-slide="2">2</div>
-      <div class="timeline-node" data-slide="3">3</div>
-      <div class="timeline-node" data-slide="4">4</div>
-      <div class="timeline-node" data-slide="5">5</div>
-      <div class="timeline-node" data-slide="6">6</div>
-      <div class="timeline-node" data-slide="7">7</div>
-      <div class="timeline-node" data-slide="8">8</div>
-      <div class="timeline-node" data-slide="9">9</div>
-      <div class="timeline-node" data-slide="10">10</div>
-      <div class="timeline-node" data-slide="11">11</div>
-      <div class="timeline-node" data-slide="12">12</div>
-      <div class="timeline-node" data-slide="13">13</div>
+      <div class="timeline-node" data-slide="1"></div>
+      <div class="timeline-node" data-slide="2">1</div>
+      <div class="timeline-node" data-slide="3">2</div>
+      <div class="timeline-node" data-slide="4">3</div>
+      <div class="timeline-node" data-slide="5">4</div>
+      <div class="timeline-node" data-slide="6">5</div>
+      <div class="timeline-node" data-slide="7">6</div>
+      <div class="timeline-node" data-slide="8">7</div>
+      <div class="timeline-node" data-slide="9">8</div>
+      <div class="timeline-node" data-slide="10">9</div>
+      <div class="timeline-node" data-slide="11">10</div>
+      <div class="timeline-node" data-slide="12">11</div>
+      <div class="timeline-node" data-slide="13">12</div>
     </div>
   </nav>
 
