organizing html and js for d3

--- a/index.html
+++ b/index.html
@@ -20,161 +20,162 @@
   <!-- MAIN SCROLL CONTENT -->
   <main class="scrollytelling-container">
 
-    <!-- Slide 1: Verse 1 -->
-    <section class="full-slide content-slide">
+    <!-- Verse 1 -->
+    <section class="full-slide content-slide" id="verse1">
       <div class="poem-box">
-        <p>From the US-Mexico crossing to the Sahara’s heat</p>
-        <p>The Mediterranean waves, where destinies meet</p>
-        <p>Through deserts and seas, across invisible lines they roam</p>
-        <p>A journey of many, yet none find their home</p>
+        <p id="line1-verse1">From the US-Mexico crossing to the Sahara’s heat</p>
+        <p id="line2-verse1">The Mediterranean waves, where destinies meet</p>
+        <p id="line3-verse1">Through deserts and seas, across invisible lines they roam</p>
+        <p id="line4-verse1">A journey of many, yet none find their home</p>
       </div>
       <div class="visual-box">
         <svg id="vis1" width="960" height="600"></svg>
       </div>
     </section>
 
-    <!-- Slide 2: Verse 2 -->
-    <section class="full-slide content-slide">
+    <!-- Verse 2 -->
+    <section class="full-slide content-slide" id="verse2">
       <div class="poem-box">
-        <p>They walked beneath the burning sun</p>
-        <p>Feet on dust, with nowhere to run</p>
-        <p>Chasing a dream, a sliver of light</p>
-        <p>A place to rest, an end to the night</p>
+        <p id="line1-verse2">They walked beneath the burning sun</p>
+        <p id="line2-verse2">Feet on dust, with nowhere to run</p>
+        <p id="line3-verse2">Chasing a dream, a sliver of light</p>
+        <p id="line4-verse2">A place to rest, an end to the night</p>
       </div>
       <div class="visual-box">
         <svg id="vis2" width="960" height="600"></svg>
       </div>
     </section>
 
-    <!-- Slide 3: Verse 3 -->
-    <section class="full-slide content-slide">
+    <!-- Verse 3 -->
+    <section class="full-slide content-slide" id="verse3">
       <div class="poem-box">
-        <p>They left behind stories</p>
-        <p>Wrapped in the arms of mothers</p>
-        <p>Pressed into the palms of fathers</p>
-        <p>Tucked inside the laughter of brothers</p>
+        <p id="line1-verse3">They left behind stories</p>
+        <p id="line2-verse3">Wrapped in the arms of mothers</p>
+        <p id="line3-verse3">Pressed into the palms of fathers</p>
+        <p id="line4-verse3">Tucked inside the laughter of brothers</p>
       </div>
       <div class="visual-box">
         <svg id="vis3" width="960" height="600"></svg>
       </div>
     </section>
 
-    <!-- TRANSITION SLIDE – Verse 4 -->
-    <section class="full-slide transition-slide">
+    <!-- Verse 4 -->
+    <section class="full-slide transition-slide" id="verse4">
       <div class="poem-box transition">
-        <p>They crossed rivers with no bridge in sight</p>
-        <p>Boarded boats in the dead of night</p>
-        <p>Waded through deserts that swallowed their names</p>
-        <p>Stepped onto roads where none remain</p>
+        <p id="line1-verse4">They crossed rivers with no bridge in sight</p>
+        <p id="line2-verse4">Boarded boats in the dead of night</p>
+        <p id="line3-verse4">Waded through deserts that swallowed their names</p>
+        <p id="line4-verse4">Stepped onto roads where none remain</p>
       </div>
     </section>
 
-    <!-- Slide 4: Verse 5 -->
-    <section class="full-slide content-slide">
+    <!-- Verse 5 -->
+    <section class="full-slide content-slide" id="verse5">
       <div class="poem-box">
-        <p>But the tide rose higher than their cries</p>
-        <p>The sun burned fierce beneath their eyes</p>
-        <p>The border stretched beyond their will</p>
-        <p>And silence waits for them still</p>
+        <p id="line1-verse5">But the tide rose higher than their cries</p>
+        <p id="line2-verse5">The sun burned fierce beneath their eyes</p>
+        <p id="line3-verse5">The border stretched beyond their will</p>
+        <p id="line4-verse5">And silence waits for them still</p>
       </div>
       <div class="visual-box">
         <svg id="vis5" width="960" height="600"></svg>
       </div>
     </section>
 
-    <!-- Slide 5: Verses 6 + 7 -->
-    <section class="full-slide content-slide">
+    <!-- Verse 6 -->
+    <section class="full-slide content-slide" id="verse6">
       <div class="poem-box">
-        <p>The border counted them once</p>
-        <p>Trespassers. Statistics. Infractions.</p>
-        <p>A file opened, a number assigned</p>
-        <p>A case closed before the ink had dried</p>
+        <p id="line1-verse6">The border counted them once</p>
+        <p id="line2-verse6">Trespassers. Statistics. Infractions.</p>
+        <p id="line3-verse6">A file opened, a number assigned</p>
+        <p id="line4-verse6">A case closed before the ink had dried</p>
       </div>
       <div class="visual-box">
         <svg id="vis6" width="960" height="600"></svg>
       </div>
     </section>
 
-
-    <section class="full-slide content-slide">
-        <div class="poem-box">
-            <p>The sea took them in</p>
-            <p>No names. No papers. No protest.</p>
-            <p>No appeals could be chased</p>
-            <p>No fingerprints could be traced</p>
-        </div>
-        <div class="visual-box">
-          <svg id="vis6" width="960" height="600"></svg>
-        </div>
-      </section>
-
-    <!-- TRANSITION SLIDE – Verse 8 -->
-    <section class="full-slide transition-slide">
-      <div class="poem-box transition">
-        <p>A boat overturned, but the logs show none</p>
-        <p>A child disappeared, but the ledger reads one</p>
-        <p>A man begged for water, but the form was denied</p>
-        <p>A body was buried, but no one cried</p>
+    <!-- Verse 7 -->
+    <section class="full-slide content-slide" id="verse7">
+      <div class="poem-box">
+        <p id="line1-verse7">The sea took them in</p>
+        <p id="line2-verse7">No names. No papers. No protest.</p>
+        <p id="line3-verse7">No appeals could be chased</p>
+        <p id="line4-verse7">No fingerprints could be traced</p>
+      </div>
+      <div class="visual-box">
+        <svg id="vis6" width="960" height="600"></svg> <!-- Reuse of vis6 intentional? -->
       </div>
     </section>
 
-    <!-- Slide 6: Verses 9 + 11 -->
-    <section class="full-slide content-slide">
+    <!-- Verse 8 -->
+    <section class="full-slide transition-slide" id="verse8">
+      <div class="poem-box transition">
+        <p id="line1-verse8">A boat overturned, but the logs show none</p>
+        <p id="line2-verse8">A child disappeared, but the ledger reads one</p>
+        <p id="line3-verse8">A man begged for water, but the form was denied</p>
+        <p id="line4-verse8">A body was buried, but no one cried</p>
+      </div>
+    </section>
+
+    <!-- Verse 9 -->
+    <section class="full-slide content-slide" id="verse9">
       <div class="poem-box">
-        <p>We do not count them unless they belong</p>
-        <p>We do not grieve them unless they are strong</p>
-        <p>We do not mourn them unless they exist</p>
-        <p>And so they vanish, dismissed</p>
+        <p id="line1-verse9">We do not count them unless they belong</p>
+        <p id="line2-verse9">We do not grieve them unless they are strong</p>
+        <p id="line3-verse9">We do not mourn them unless they exist</p>
+        <p id="line4-verse9">And so they vanish, dismissed</p>
       </div>
       <div class="visual-box">
         <svg id="vis7" width="960" height="600"></svg>
       </div>
     </section>
 
-    <section class="full-slide content-slide">
-        <div class="poem-box">
-            <p>Vanished once, where no one can see</p>
-            <p>Vanished twice, from history</p>
-            <p>Stamped and erased</p>
-            <p>Filed and replaced</p>
-        </div>
-        <div class="visual-box">
-          <svg id="vis7" width="960" height="600"></svg>
-        </div>
+    <!-- Verse 10 -->
+    <section class="full-slide content-slide" id="verse10">
+      <div class="poem-box">
+        <p id="line1-verse10">Vanished once, where no one can see</p>
+        <p id="line2-verse10">Vanished twice, from history</p>
+        <p id="line3-verse10">Stamped and erased</p>
+        <p id="line4-verse10">Filed and replaced</p>
+      </div>
+      <div class="visual-box">
+        <svg id="vis7" width="960" height="600"></svg>
+      </div>
     </section>
 
-    <section class="full-slide content-slide">
-        <div class="poem-box">
-            <p>But we will not move on</p>
-            <p>We will not forget the hands that reached for a future</p>
-            <p>And were met with waves that did not care</p>
-            <p>Gates that did not open</p>
-            <p>Land that did not dare</p>
-        </div>
-        <div class="visual-box">
-          <svg id="vis7" width="960" height="600"></svg>
-        </div>
+    <!-- Verse 11 -->
+    <section class="full-slide content-slide" id="verse11">
+      <div class="poem-box">
+        <p id="line1-verse11">But we will not move on</p>
+        <p id="line2-verse11">We will not forget the hands that reached for a future</p>
+        <p id="line3-verse11">And were met with waves that did not care</p>
+        <p id="line4-verse11">Gates that did not open</p>
+        <p id="line5-verse11">Land that did not dare</p>
+      </div>
+      <div class="visual-box">
+        <svg id="vis7" width="960" height="600"></svg>
+      </div>
     </section>
 
-    <section class="full-slide transition-slide">
-        <div class="poem-box transition">
-            <p>We will carve their names into the sky</p>
-            <p>Let the stars hold them high</p>
-            <p>Let the earth remember their weight</p>
-            <p>Let the wind echo their fate</p>
-            <br />
-            <p>So even if they are lost</p>
-            <p><strong>They are never truly gone.</strong></p>
-        </div>
-      </section>
-
-  
+    <!-- Verse 12 -->
+    <section class="full-slide transition-slide" id="verse12">
+      <div class="poem-box transition">
+        <p id="line1-verse12">We will carve their names into the sky</p>
+        <p id="line2-verse12">Let the stars hold them high</p>
+        <p id="line3-verse12">Let the earth remember their weight</p>
+        <p id="line4-verse12">Let the wind echo their fate</p>
+        <br />
+        <p id="line5-verse12">So even if they are lost</p>
+        <p id="line6-verse12"><strong>They are never truly gone.</strong></p>
+      </div>
+    </section>
 
   </main>
 
   <nav class="progress-timeline">
     <div class="timeline-container">
-      <div class="timeline-node" data-slide="1"></div>
+      <!-- <div class="timeline-node" data-slide="1"></div> -->
       <div class="timeline-node" data-slide="2">1</div>
       <div class="timeline-node" data-slide="3">2</div>
       <div class="timeline-node" data-slide="4">3</div>
@@ -190,33 +191,6 @@
     </div>
   </nav>
 
-  <script src="main.js"></script>
-  <script>
-    document.querySelectorAll(".timeline-node").forEach(node => {
-      node.addEventListener("click", () => {
-        const index = parseInt(node.getAttribute("data-slide")) - 1;
-        const targetSection = document.querySelectorAll(".full-slide")[index];
-        if (targetSection) {
-          targetSection.scrollIntoView({ behavior: "smooth" });
-        }
-      });
-    });
-
-    // Optional: highlight active node on scroll
-    window.addEventListener("scroll", () => {
-      const sections = document.querySelectorAll(".full-slide");
-      const nodes = document.querySelectorAll(".timeline-node");
-
-      sections.forEach((section, index) => {
-        const rect = section.getBoundingClientRect();
-        if (rect.top <= window.innerHeight * 0.4 && rect.bottom >= window.innerHeight * 0.4) {
-          nodes.forEach(n => n.classList.remove("active"));
-          if (nodes[index]) {
-            nodes[index].classList.add("active");
-          }
-        }
-      });
-    });
-  </script>
+<script src="main.js"></script>
 </body>
 </html>
