adding in first two map visualizations

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Where No One Counts</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://unpkg.com/topojson-client@3"></script>
 </head>
 <body>
 
