citing dataset and also fixing scroll bar functionality

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="intro-content">
       <h1 class="main-title">Where No One Counts</h1>
       <p class="subtitle">An Interactive Visualization by Cristina R and Yareli G</p>
+      <p style="margin-top: 1rem; font-size: 14px; color: #8c8c8c;">
+        Dataset from the 
+        <a href="https://missingmigrants.iom.int/data" target="_blank" style="color: #aa7074; text-decoration: underline;">
+          Missing Migrants Project
+        </a>
+      </p>
       <div class="scroll-indicator">↓</div>
     </div>
   </section>
