--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- TITLE / INTRO -->
-  <section class="full-slide intro">
+  <section class="full-slide intro" id="verse0">
     <div class="intro-content">
       <h1 class="main-title">Where No One Counts</h1>
       <p class="subtitle">An Interactive Visualization by Cristina R and Yareli G</p>
