--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
   <nav class="progress-timeline">
     <div class="timeline-container">
-      <!-- <div class="timeline-node" data-slide="1"></div> -->
+      <div class="timeline-node" data-slide="1">★</div>
       <div class="timeline-node" data-slide="2">1</div>
       <div class="timeline-node" data-slide="3">2</div>
       <div class="timeline-node" data-slide="4">3</div>
