--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://unpkg.com/topojson-client@3"></script>
 </head>
 <body>
+  
 
   <!-- TITLE / INTRO -->
   <section class="full-slide intro" id="verse0">
@@ -32,7 +33,10 @@
       <div class="poem-box">
         <p id="line1-verse1">From the US-Mexico crossing to the Sahara’s heat</p>
         <p id="line2-verse1">The Mediterranean waves, where destinies meet</p>
-        <p id="line3-verse1">Through deserts and seas, across invisible lines they roam</p>
+        <p id="line3-verse1">
+          Through deserts and seas, across invisible 
+          <span class="verse-lines-pulse">lines</span> they roam
+        </p>             
         <p id="line4-verse1">A journey of many, yet none find their home</p>
       </div>
       <div class="visual-box">
