adding zoom feature map 2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       <div class="poem-box">
         <p id="line1-verse2">They walked beneath the burning sun</p>
         <p id="line2-verse2">Feet on dust, with nowhere to run</p>
-        <p id="line3-verse2">Chasing a dream, a sliver of light</p>
+        <p id="line3-verse2">
+          Chasing a dream, a sliver of <span class="zoom-light" style="color:goldenrod; cursor: pointer;">light</span>
+        </p>
+        
         <p id="line4-verse2">A place to rest, an end to the night</p>
       </div>
       <div class="visual-box">
