--- a/index.html
+++ b/index.html
@@ -133,10 +133,24 @@
         <p id="line3-verse9">We do not mourn them unless they exist</p>
         <p id="line4-verse9">And so they vanish, dismissed</p>
       </div>
-      <div class="visual-box">
+
+      <div class="visual-box" style="flex-direction: column; align-items: center;">
         <svg id="vis9" width="960" height="600"></svg>
+        <div id="year-controls" style="
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 0.5rem;
+          margin-top: 1rem;
+          padding: 0.5rem 1rem;
+          background: #fff2f2;
+          border-radius: 8px;
+          box-shadow: 0 0 6px rgba(0,0,0,0.05);
+        "></div>
       </div>
+      
     </section>
+    
 
     <!-- Verse 10 -->
     <section class="full-slide content-slide" id="verse10">
